<resources>
    <string name="app_name">MovieToday</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="release_date">Release Date</string>
    <string name="error_load_data">Failed to load data! Please check your Internet connections and try again!</string>
    <string name="cant_download">Oops!! There is no internet connection. Please enable internet connection and try again.</string>


    <string name="default_gallery_storage">MovieToday</string>

    <string name="keyColorPrimaryPreference">color_primary_preference</string>
    <string name="keyColorAccentPreference">color_accent_preference</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>


    <string name="ToolbarColorPickerPreference">Toolbar Color Picker Preference</string>
    <string name="BackgroundColorPickerPreference">Background Color Picker Preference</string>
    <string name="ToolbarTextColorPickerPreference">Toolbar Text Color Picker Preference</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>

    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of PAPB</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://github.com/AdeWijaNugraha</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://github.com/AdeWijaNugraha</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://github.com/AdeWijaNugraha</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>

    <string name="key_directory_download">key_directory_download</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="settings">Settings</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_again">Download Again</string>
    <string name="download_complete">Download Complete</string>
</resources>
