<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <PreferenceCategory android:title="General">
            <EditTextPreference
                android:defaultValue="@string/default_gallery_storage"
                android:key="@string/key_directory_download"
                android:summary="@string/default_gallery_storage"
                android:title="@string/title_gallery_storage" />

            <com.skydoves.colorpickerpreference.ColorPickerPreference
                android:key="@string/keyColorPrimaryPreference"
                android:title="Primary Color"
                android:summary="Changes primary color"
                app:preference_dialog_title="Primary Color Picker Dialog"
                app:preference_dialog_positive="@string/confirm"
                app:preference_dialog_negative="@string/cancel"
                app:preference_palette="@drawable/palette"
                app:preference_selector="@drawable/wheel"
                app:default_color="@color/colorPrimary"/>

            <com.skydoves.colorpickerpreference.ColorPickerPreference
                android:key="@string/keyColorAccentPreference"
                android:title="Accent Color"
                android:summary="Changes accent color"
                app:preference_dialog_title="Accent Color Picker Dialog"
                app:preference_dialog_positive="@string/confirm"
                app:preference_dialog_negative="@string/cancel"
                app:preference_palette="@drawable/palette"
                app:preference_selector="@drawable/wheel"
                app:default_color="@color/colorAccent"/>
        </PreferenceCategory>

        <PreferenceCategory android:title="@string/pref_header_about">

            <Preference
                android:selectable="false"
                android:summary="@string/summary_about" />

            <Preference
                android:summary="@string/app_version"
                android:title="@string/title_version" />

            <Preference
                android:key="@string/key_send_feedback"
                android:summary="@string/summary_support"
                android:title="@string/title_send_feedback" />

            <!-- preference opens url in browser -->
            <Preference
                android:summary="@string/summary_faq"
                android:title="@string/title_faq">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/url_faq" />
            </Preference>

            <Preference android:title="@string/privacy_policy">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/url_privacy" />
            </Preference>

            <Preference android:title="@string/title_terms">
                <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/url_terms" />
            </Preference>
        </PreferenceCategory>

</PreferenceScreen>