<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_half_margin"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        app:cardCornerRadius="6dp"
        app:cardElevation="@dimen/activity_half_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_half_margin"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                tools:text="Title Will Be Shown Here" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_half_margin">

                <ImageView
                    android:id="@+id/iv_item_poster"
                    android:layout_width="@dimen/poster_width_large"
                    android:layout_height="@dimen/poster_height_large"
                    android:scaleType="centerCrop"
                    android:src="@drawable/placeholder" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_half_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        tools:text="Rating" />

                    <include layout="@layout/detail_rating" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_half_margin"
                        android:text="@string/overview"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        tools:text="Overview" />

                    <TextView
                        android:id="@+id/tv_item_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_half_margin"
                        android:layout_marginTop="@dimen/activity_half_margin"
                        android:ellipsize="end"
                        android:maxLines="3"
                        tools:text="A general outline of a subject or situation survey or summary. Without value and effect." />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_half_margin">

                        <Button
                            android:id="@+id/btn_item_detail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:backgroundTint="@color/colorAccent"
                            android:text="@string/detail"
                            android:textColor="@android:color/white" />

                        <Button
                            android:id="@+id/btn_item_share"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:backgroundTint="@color/colorAccent"
                            android:text="@string/share"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>